# resource-monitor

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ProcessCard.vue  ProcessPicker.vue  SnapshotTable.vue  Sparkline.vue
