[package]
name = "resource-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "resource_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "resource-monitor"
path = "src/main.rs"

[dependencies]
tauri        = { version = "2", features = [] }
sysinfo      = "0.30"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[build-dependencies]
tauri-build  = { version = "2", features = [] }
